--- a/src/Game.css
+++ b/src/Game.css
@@ -114,6 +114,10 @@ h2 {
     margin: 10px 0;
   }
   .ScoreTable {
-    width: 100vw;
+    width: 105%;
+    margin-left: 20px;
+  }
+  .Game-header {
+    width: 110%;
   }
 }
